--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Hospital Gneral De La Plaza De La salud</title>
     
     <!-- SEO y Metadatos -->
-    <meta name="description" content="Hospital Salud y Bienestar, ofrecemos servicios médicos de calidad con un equipo de especialistas dedicados a su cuidado. Consultas, cirugías y más.">
+    <meta name="description" content="ospital Gneral De La Plaza De La salud</, ofrecemos servicios médicos de calidad con un equipo de especialistas dedicados a su cuidado. Consultas, cirugías y más.">
     <meta name="keywords" content="hospital, salud, bienestar, consulta general, cirugías, doctores, medicina, República Dominicana">
     <meta name="author" content="Desarrollador Frontend">
     <link rel="canonical" href="https://ejemplo.com/">
@@ -266,3 +266,4 @@
     <script type="module" src="script.js"></script>
   </body>
 </html>
+
