--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Hospital Gneral De La Plaza De La salud</title>
     
     <!-- SEO y Metadatos -->
-    <meta name="description" content="ospital Gneral De La Plaza De La salud</, ofrecemos servicios médicos de calidad con un equipo de especialistas dedicados a su cuidado. Consultas, cirugías y más.">
+    <meta name="description" content="Hospital Gneral De La Plaza De La salud</, ofrecemos servicios médicos de calidad con un equipo de especialistas dedicados a su cuidado. Consultas, cirugías y más.">
     <meta name="keywords" content="hospital, salud, bienestar, consulta general, cirugías, doctores, medicina, República Dominicana">
     <meta name="author" content="Desarrollador Frontend">
     <link rel="canonical" href="https://ejemplo.com/">
@@ -31,7 +31,7 @@
     <!-- Menú Fijo Superior -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#inicio"><i class="fas fa-hospital"></i> Salud y Bienestar</a>
+            <a class="navbar-brand" href="#inicio"><i class="fas fa-hospital"></i> Hospital Gneral De La Plaza De La salud</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -55,7 +55,7 @@
             </div>
             <div class="container py-5">
                 <h1 class="display-4">🏥 Cuidamos de ti y los tuyos ❤️</h1>
-                <p class="lead">En el Hospital Salud y Bienestar, combinamos tecnología de punta con un equipo humano excepcional para ofrecerte la mejor atención médica.</p>
+                <p class="lead">En el ospital Gneral De La Plaza De La salud, combinamos tecnología de punta con un equipo humano excepcional para ofrecerte la mejor atención médica.</p>
                 <a href="#contacto" class="btn btn-cta btn-lg">Agenda tu Cita Ahora</a>
             </div>
         </section>
@@ -266,4 +266,5 @@
     <script type="module" src="script.js"></script>
   </body>
 </html>
+
 
