--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- Sección Inicio -->
         <section id="inicio" class="text-center">
             <div class="banner-image">
-                <img src="https://amhigo.com/images/amhiblog/Especialistas/Jorge_Luis_Poo/Consulta-1.jpg" alt="Banner del hospital" class="img-fluid w-100">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuG9qhiWktKLntY8RL1Hm_YmH3-NccX3L90w&s">
             </div>
             <div class="container py-5">
                 <h1 class="display-4">🏥 Cuidamos de ti y los tuyos ❤️</h1>
@@ -266,5 +266,6 @@
     <script type="module" src="script.js"></script>
   </body>
 </html>
+
 
 
