--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital Gneral De La Plaza De La salud</title>
+    <title>Hospital General De La Plaza De La salud</title>
     
     <!-- SEO y Metadatos -->
-    <meta name="description" content="Hospital Gneral De La Plaza De La salud</, ofrecemos servicios médicos de calidad con un equipo de especialistas dedicados a su cuidado. Consultas, cirugías y más.">
+    <meta name="description" content="Hospital General De La Plaza De La salud</, ofrecemos servicios médicos de calidad con un equipo de especialistas dedicados a su cuidado. Consultas, cirugías y más.">
     <meta name="keywords" content="hospital, salud, bienestar, consulta general, cirugías, doctores, medicina, República Dominicana">
     <meta name="author" content="Desarrollador Frontend">
     <link rel="canonical" href="https://ejemplo.com/">
@@ -54,8 +54,8 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuG9qhiWktKLntY8RL1Hm_YmH3-NccX3L90w&s">
             </div>
             <div class="container py-5">
-                <h1 class="display-4">🏥 Cuidamos de ti y los tuyos ❤️</h1>
-                <p class="lead">En el ospital Gneral De La Plaza De La salud, combinamos tecnología de punta con un equipo humano excepcional para ofrecerte la mejor atención médica.</p>
+                <h1 class="display-4">🏥 Mi salud, mi derecho 🏥</h1>
+                <p class="lead">En el Hospital General De La Plaza De La salud, combinamos tecnología de punta con un equipo humano excepcional para ofrecerte la mejor atención médica.</p>
                 <a href="#contacto" class="btn btn-cta btn-lg">Agenda tu Cita Ahora</a>
             </div>
         </section>
@@ -266,6 +266,7 @@
     <script type="module" src="script.js"></script>
   </body>
 </html>
+
 
 
 
