--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Menú Fijo Superior -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#inicio"><i class="fas fa-hospital"></i> Hospital Gneral De La Plaza De La salud</a>
+            <a class="navbar-brand" href="#inicio"><i class="fas fa-hospital"></i> Hospital General De La Plaza De La salud</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -266,6 +266,7 @@
     <script type="module" src="script.js"></script>
   </body>
 </html>
+
 
 
 
